# cmake-library-project-template

./: .gitignore  CMakeLists.txt  README.md
include/: library.h
samples/: CMakeLists.txt
samples/library_sample/: CMakeLists.txt  main.cpp
scripts/: generate_vs19_solution.bat
src/: CMakeLists.txt  library.cpp
